<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/toolbar"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/MY_DP_50"
              android:gravity="center"
              android:background="@color/theme_color"
              android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/picker_cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/MY_SP_14"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:gravity="center"
        android:text="@string/picker_title"
        android:textColor="@color/white"
        android:textSize="@dimen/MY_SP_16"/>

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/picker_sure"
        android:textColor="@color/white"
        android:textSize="@dimen/MY_SP_14"/>

</LinearLayout>