<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@color/theme_color"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_left_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/MY_DP_40"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_point"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/tv_total"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/tv_speed"/>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="#0fffffff"
            android:layout_height="@dimen/MY_DP_0.5"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/popRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <View
        android:id="@+id/v_tou"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="#50000000"/>


</LinearLayout>
