<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2a364c">

        <ImageView
            android:id="@+id/de_img_backgroud"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/login_src" />

        <LinearLayout
            android:id="@+id/ll_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_sign_in_dialog"
            android:layout_marginTop="@dimen/MY_DP_140"
            android:layout_marginLeft="@dimen/MY_DP_24"
            android:layout_marginRight="@dimen/MY_DP_24"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login"
                android:layout_width="@dimen/MY_DP_100"
                android:layout_height="@dimen/MY_DP_100"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/logo_login"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/MY_DP_5"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/MY_SP_28" />


            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/MY_DP_40"
                android:layout_marginLeft="@dimen/MY_DP_10"
                android:layout_marginRight="@dimen/MY_DP_10"
                android:hint="@string/name"
                android:paddingLeft="@dimen/MY_DP_10"
                android:textColor="@color/white"
                android:textColorHint="@color/white_tou"
                android:drawableLeft="@mipmap/icon_username"
                android:background="@drawable/background_sign_in_dialog" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/MY_DP_40"
                android:layout_marginLeft="@dimen/MY_DP_10"
                android:layout_marginRight="@dimen/MY_DP_10"
                android:layout_marginTop="@dimen/MY_DP_5"
                android:hint="@string/password"
                android:textColorHint="@color/white_tou"
                android:paddingLeft="@dimen/MY_DP_10"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:drawableLeft="@mipmap/icon_password"
                android:background="@drawable/background_sign_in_dialog" />



            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/MY_DP_40"
                android:layout_margin="@dimen/MY_DP_10"
                android:textAllCaps="false"
                android:onClick="btnLogin"
                android:background="@drawable/background_login_in_btn"
                android:text="@string/login"
                android:textColor="@color/white" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/MY_DP_5"
            android:gravity="center"
            android:text="-中大检测客户端V3.0-"
            android:layout_alignParentBottom="true"
            android:textColor="#ffffff"
            android:layout_marginBottom="@dimen/MY_DP_60"
            android:textSize="@dimen/MY_SP_12" />

    </RelativeLayout>

</layout>